--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-inkjet = "0.10"
+# inkjet = "0.10"
 minijinja = "2.1"
 pest = "2.7"
 pest_derive = "2.7"
